--- a/notebook/01_maths_numpy_pytorch/02_gradient_descent.ipynb
+++ b/notebook/01_maths_numpy_pytorch/02_gradient_descent.ipynb
@@ -8,8 +8,8 @@
     "## Gradient Descent\n",
     "\n",
     "```\n",
-    "- \n",
-    "- \n",
+    "- Gradient descent is an optimization approach and it's frequently used to train neural networks and machine learning models. \n",
+    "- In gradient descent, the cost function is used to measure the accuracy of each iteration of parameter changes, and these models improve over time as training data is used. \n",
     "\n",
     "```"
    ]
@@ -13578,18 +13578,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Gradient Descent In 2-D\n",
+    "\n",
+    "```\n",
+    "- It's referred to as `partial derivatives` wrt the dimensions/planes. e.g partial derivative wrt x or y plane.\n",
+    "- Partial derivatives are also known as `Gradient`.\n",
+    "- The global/local minima for gradient descent in a 2-D plane has two (2) coordinates. i.e local minima: (x,y)\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def peaks_function(x: float, y: float) -> float:\n",
+    "    \"\"\"This returns the computed function.\"\"\"\n",
+    "    x, y = np.meshgrid(x, y)\n",
+    "\n",
+    "    z = (\n",
+    "        3 * (1 - x) ** 2 * np.exp(-(x**2) - (y + 1) ** 2)\n",
+    "        - 10 * (x / 5 - x**3 - y**5) * np.exp(-(x**2) - y**2)\n",
+    "        - 1 / 3 * np.exp(-((x + 1) ** 2) - y**2)\n",
+    "    )\n",
+    "    return z"
+   ]
   },
   {
    "cell_type": "code",
