Add manual train test split

--- a/notebook/02_ANN/02_ANN-classification.ipynb
+++ b/notebook/02_ANN/02_ANN-classification.ipynb
@@ -13315,6 +13315,7 @@
     "    \"\"\"This is used to build the model architecture.\"\"\"\n",
     "\n",
     "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
     "        self.input = nn.Linear(2, 1)\n",
     "        self.output = nn.Linear(1, 1)\n",
     "\n",
