--- a/notebook/03_cross_validation/01_cross_validation.ipynb
+++ b/notebook/03_cross_validation/01_cross_validation.ipynb
@@ -21,6 +21,7 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -128,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 7, 6, 9, 0, 5, 3, 4])"
+       "array([6, 4, 1, 3, 7, 5, 8, 0])"
       ]
      },
      "execution_count": 6,
@@ -157,8 +158,8 @@
     {
      "data": {
       "text/plain": [
-       "array([ True,  True, False,  True,  True,  True,  True,  True, False,\n",
-       "        True])"
+       "array([ True,  True, False,  True,  True,  True,  True,  True,  True,\n",
+       "       False])"
       ]
      },
      "execution_count": 7,
@@ -181,7 +182,7 @@
      "data": {
       "text/plain": [
        "array([0.51182162, 0.9504637 , 0.94864945, 0.31183145, 0.42332645,\n",
-       "       0.82770259, 0.40919914, 0.02755911])"
+       "       0.82770259, 0.40919914, 0.54959369])"
       ]
      },
      "execution_count": 8,
@@ -203,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.14415961, 0.54959369])"
+       "array([0.14415961, 0.02755911])"
       ]
      },
      "execution_count": 9,
@@ -262,52 +263,165 @@
     }
    ],
    "source": [
-    "training_data, test_data = split_data_into_train_test(input_arr=X, training_pct=0.8)\n",
+    "X_train, X_test = split_data_into_train_test(input_arr=X, training_pct=0.8)\n",
     "\n",
-    "training_data.shape, test_data.shape"
+    "X_train.shape, X_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([120]), torch.Size([30]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train, y_test = split_data_into_train_test(input_arr=y, training_pct=0.8)\n",
+    "y_train.shape, y_test.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build ANN\n",
+    "class Net(nn.Module):\n",
+    "    \"\"\"Artificial Neural Network.\"\"\"\n",
+    "\n",
+    "    def __init__(self, n_units: int, *args, **kwargs) -> None:\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        self.input = nn.Linear(4, n_units)\n",
+    "        self.output = nn.Linear(n_units, 3)\n",
+    "\n",
+    "    def forward(self, X: torch.Tensor) -> torch.Tensor:\n",
+    "        \"\"\"This is used to perform forward propagation.\"\"\"\n",
+    "        X = self.input(X)\n",
+    "        X = F.relu(X)\n",
+    "        X = self.output(X)\n",
+    "        X = F.softmax(X)\n",
+    "        return X"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Net(\n",
+       "  (input): Linear(in_features=4, out_features=32, bias=True)\n",
+       "  (output): Linear(in_features=32, out_features=3, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net = Net(n_units=32)\n",
+    "net"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ny/dl75sc_x2tb54lsymt5bh5p00000gn/T/ipykernel_94548/3250296758.py:15: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  X = F.softmax(X)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(92.5000), tensor(96.6667))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "learning_rate, epochs = 0.01, 1_000\n",
+    "optimizer = torch.optim.SGD(params=net.parameters(), lr=learning_rate)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "losses = torch.zeros(size=(epochs,))\n",
+    "\n",
+    "for epoch_idx in np.arange(epochs):\n",
+    "    # Reset the gradients from prev. back prop\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "    # Fwd prop\n",
+    "    _y_pred = net(X_train)\n",
+    "\n",
+    "    # Compute loss\n",
+    "    loss = criterion(_y_pred, y_train)\n",
+    "    losses[epoch_idx] = loss\n",
+    "\n",
+    "    # Back prop\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "\n",
+    "# Make predictions\n",
+    "# Training data\n",
+    "y_proba_train = net(X_train)\n",
+    "y_pred_train = torch.argmax(y_proba_train, axis=1)\n",
+    "accuracy_train = torch.mean((y_pred_train == y_train).float()) * 100\n",
+    "\n",
+    "# Test data\n",
+    "y_proba_test = net(X_test)\n",
+    "y_pred_test = torch.argmax(y_proba_test, axis=1)\n",
+    "accuracy_test = torch.mean((y_pred_test == y_test).float()) * 100\n",
+    "\n",
+    "\n",
+    "accuracy_train, accuracy_test"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 8, 1: 14, 2: 8})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.unique(y_train)\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "Counter(list(np.array(y_test)))"
+   ]
   },
   {
    "cell_type": "code",
