Add L2 regularization to nottbook

--- a/notebook/02_ANN/02_ANN-classification.ipynb
+++ b/notebook/02_ANN/02_ANN-classification.ipynb
@@ -13389,7 +13389,7 @@
     "\n",
     "    def forward(self, X: torch.Tensor) -> torch.Tensor:\n",
     "        \"\"\"This is used to perform forward propagation.\"\"\"\n",
-    "        X = self.layers[f\"input\"](X)\n",
+    "        X = self.layers[\"input\"](X)\n",
     "        X = F.relu(X)\n",
     "\n",
     "        # Hidden layers\n",
