--- a/notebook/03_cross_validation/01_cross_validation.ipynb
+++ b/notebook/03_cross_validation/01_cross_validation.ipynb
@@ -20,7 +20,7 @@
     "# Standard imports\n",
     "import numpy as np\n",
     "import torch\n",
-    "import torch.nn as nn\n",
+    "from torch import nn\n",
     "import torch.nn.functional as F\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -92,10 +92,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Separate Into Train and Test"
+    "### Separate Into Train and Test (Manually)"
    ]
   },
   {
@@ -228,6 +229,7 @@
     "def split_data_into_train_test(\n",
     "    input_arr: np.ndarray, training_pct: float\n",
     ") -> tuple[np.ndarray, np.ndarray]:\n",
+    "    \"\"\"This is used to manually split the data into training and test sets.\"\"\"\n",
     "    training_size = int(input_arr.shape[0] * training_pct)\n",
     "    # Array containing the training and test indices\n",
     "    data_bools = np.zeros(shape=(input_arr.shape[0]), dtype=bool)\n",
