chore: Add comments to parametric experiment for batch size

--- a/notebook/05_hyperparams/01_mini_batch_contd.ipynb
+++ b/notebook/05_hyperparams/01_mini_batch_contd.ipynb
@@ -10199,6 +10199,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parametric Experiment\n",
+    "\n",
+    "```text\n",
+    "- Experiment with different batch sizes.\n",
+    "- Record the time taken to train the model using different batch sizes.\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -27354,11 +27367,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Observation(s)\n",
+    "\n",
+    "```text\n",
+    "- Models with small batch size take much longer to train compared with models with large batch size.\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
