chore: Update notebooks

--- a/notebook/05_hyperparams/04_loss_functions.ipynb
+++ b/notebook/05_hyperparams/04_loss_functions.ipynb
@@ -7965,6 +7965,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comment:\n",
+    "\n",
+    "```text\n",
+    "- When the true value is 1.0 and the model's output is [[1.0, 4.0, 3.0]], it means that the model is predicting the value at index position 1 which is 4.0.\n",
+    "- The loss in such a scenario is 3.34901214\n",
+    "\n",
+    "- When the true value is 4.0 and the model's output is [[1.0, 4.0, 3.0]], it means that the model is predicting the value at index position 1 which is 4.0.\n",
+    "- The loss in such a scenario is 0.3490122. The loss is not 0.00 because the model still thinks it's 4.0 or 3.0. i.e. the model is not totally sure of the correct value.\n",
+    "\n",
+    "- Finally, when the true value is 3.0 and the model's output is [[1.0, 4.0, 3.0]], it means that the model is predicting the value at index position 1 which is 4.0.\n",
+    "- The loss in such a scenario is 1.3490121. The loss is not as high as 3.34901214 because even though the model is wrong, it's not as wrong as in the first example.\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
