feat: Add Kaiming and Xavier weight initializations

--- a/notebook/07_weights_init/01_weight_init.ipynb
+++ b/notebook/07_weights_init/01_weight_init.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Weight Initialization\n",
     "\n",
-    "## Why Are DL Model Weights Initialized Ramdomly?\n",
+    "## Why Are DL Model Weights Initialized Randomly?\n",
     "\n",
     "```text\n",
     "- Stochastic gradient descent: The most common method for training deep learning models is stochastic gradient descent (SGD). SGD works by iteratively adjusting the model weights in the direction of the negative gradient of the loss function. This means that the model weights are constantly changing during training. If the weights are initialized to the same value, then they will all move in the same direction, and the model will not be able to learn.\n",
