feat: Add Kaiming and Xavier weight inits and Weight freesing

--- a/notebook/07_weights_init/01_weight_init.ipynb
+++ b/notebook/07_weights_init/01_weight_init.ipynb
@@ -22783,7 +22783,7 @@
     "    epochs: int,\n",
     "    learning_rate: float,\n",
     "    optimizer_name: str,\n",
-    "):\n",
+    ")-> tuple[np.ndarray, np.ndarray, np.ndarray, Net]:\n",
     "    \"\"\"This is used to train the FFN model.\"\"\"\n",
     "    PCT = 100\n",
     "    __optimizer__ = getattr(torch.optim, optimizer_name)\n",
