chore: Update Weight freezing

--- a/notebook/07_weights_init/02_Xavier_n_Kaiming.ipynb
+++ b/notebook/07_weights_init/02_Xavier_n_Kaiming.ipynb
@@ -16626,8 +16626,18 @@
     "## Weights Freezing\n",
     "\n",
     "```text\n",
-    "-\n",
-    "-\n",
+    "- This refers to switching off the gradient descent in that layer.\n",
+    "- The weights at that layer will NOT change and the layer will NO longer learn.\n",
+    "- The main application is when working with downloaded or pretrained networks. i.e you wanna fine-tune the model.\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "net = Net()\n",
+    "\n",
+    "# Switch off all layers except input\n",
+    "for param in net.named_parameters():\n",
+    "    if \"input\" not in param[0]:\n",
+    "        param[1].requires_grad = False\n",
     "```"
    ]
   },
@@ -40867,11 +40877,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Comments:\n",
+    "\n",
+    "```text\n",
+    "- When the model weights were frozen (epochs below 51), the model did NOT learn at all.\n",
+    "- Switching back learning after 50 epochs led to an improved performance.\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
