chore: Update Weight freezing

--- a/notebook/07_weights_init/02_Xavier_n_Kaiming.ipynb
+++ b/notebook/07_weights_init/02_Xavier_n_Kaiming.ipynb
@@ -40894,6 +40894,53 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Condition Number\n",
+    "\n",
+    "```text\n",
+    "Condition Number\n",
+    "----------------\n",
+    "- This is the measure of how sensitive the output of a neural network is to changes in its inputs.\n",
+    "- A high condition number indicates that a small change in the inputs can lead to a large change in the output while a low condition number indicates that the output is more stable.\n",
+    "\n",
+    "Ways of Reducing The Condition Number\n",
+    "-------------------------------------\n",
+    "- Regularization.\n",
+    "- Weight initialization.\n",
+    "- Data augmentation.\n",
+    "```\n",
+    "<br>\n",
+    "\n",
+    "### Frobenius Norm \n",
+    "\n",
+    "```text\n",
+    "Frobenius Norm\n",
+    "--------------\n",
+    "- This is the measure of the size of a matrix.\n",
+    "- It's the square root of the sum of the squares of all the elements in the matrix.\n",
+    "- It's used to measure the distance between 2 matrices or compare the size of the 2 matrices.\n",
+    "\n",
+    "Applications\n",
+    "------------\n",
+    "- Regularization.\n",
+    "- Feature selection.\n",
+    "- Used as a loss function.\n",
+    "```\n",
+    "\n",
+    "$$distance = \\sqrt{\\sum_{i=1}^M\\sum_{j=1}^N(w_{i,j}^{t} - w_{i,j}^{(t-1)})}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
