chore: Add comment

--- a/notebook/06_FNN/01_classify_digits.ipynb
+++ b/notebook/06_FNN/01_classify_digits.ipynb
@@ -38674,6 +38674,8 @@
     "    net, PCT = Net(), 100\n",
     "    __optimizer__ = getattr(torch.optim, optimizer_name)\n",
     "    optimizer = __optimizer__(params=net.parameters(), lr=learning_rate)\n",
+    "    # Negative log likelihood loss.\n",
+    "    # It is useful to train a classification problem with C classes.\n",
     "    criterion = nn.NLLLoss()\n",
     "    train_loss = torch.zeros(size=(epochs,))\n",
     "    train_accuracy, validation_accuracy = (\n",
