chore: Update notebook on convolution

--- a/notebook/09_convolution/01_conv_intro.ipynb
+++ b/notebook/09_convolution/01_conv_intro.ipynb
@@ -5,7 +5,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convolution\n",
+    "# Convolution And Transformations\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Table of Content\n",
+    "- [Convolution](#convolution)\n",
+    "- [Padding](#padding)\n",
+    "- [Stride](#stride)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "## Convolution \n",
     "\n",
     "```text\n",
     "- Convolution is a mathematical operation that's used to analyze data.\n",
@@ -1818,16 +1829,43 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Padding\n",
     "\n",
     "```text\n",
-    "- \n",
-    "- \n",
+    "- This is used to increase the size of the result of convolution so that the output matches with the size of the input data.\n",
+    "- It's a technique used to add zeros aound the edges of an input data before it's convolved with a filter. This is done to preserve the size of the input data after convolution.\n",
+    "- It's important for tasks such as image classification where it's important to presere the spatial information of the image.\n",
+    "```\n",
+    "<br>\n",
+    "\n",
+    "## Stride\n",
+    "\n",
+    "```text\n",
+    "- It's a parameter that controls how the convolution parameter moves over the input data. i.e. the number of pixels that the filter is moved over the input data in each step.\n",
+    "- A larger stride will result in a smaller output data while a smaller stride will result in a larger output data size.\n",
+    "\n",
+    "Advantages of Using Stride\n",
+    "--------------------------\n",
+    "- It can reduce the computational complexity of the CNN.\n",
+    "- It can also reduce overfitting by reducing the amount of data the model is trained on.\n",
+    "\n",
+    "Disadvantages\n",
+    "-------------\n",
+    "- It can reduce accuracy of the model by reducing the amount of information the model is able to learn from.\n",
+    "- It can also make the model more sensitive to noise in the input data.\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
