chore: Add max and mean pooling

--- a/notebook/09_convolution/01_conv_intro.ipynb
+++ b/notebook/09_convolution/01_conv_intro.ipynb
@@ -4014,8 +4014,10 @@
     "## Transpose Convolution\n",
     "\n",
     "```text\n",
-    "- This works by reversing the process of convolution. i.e. the filter is moved in the opposite direction; from the output image to the input image and the output of the transpose convolution is the new image that's the same size as the input image.\n",
     "- It's also known as `deconvolution` which is a way of upsampling an image i.e. increasing the size of an image w/o introducng any new info by scalar multiplying the image with the filter.\n",
+    "\n",
+    "- This works by reversing the process of convolution. The filter is moved in the opposite direction. i.e. from the output image to the input image and the output of the transpose convolution is the new image that's the same size as the input image.\n",
+    "\n",
     "\n",
     "Applications\n",
     "------------\n",
@@ -6409,11 +6411,52 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<hr><br>\n",
+    "\n",
+    "## Pooling\n",
+    "\n",
+    "```text\n",
+    "- It's technique used to downsample or reduce the spatial dimensions of feature maps extracted from convolutional layers.\n",
+    "\n",
+    "Max Pooling\n",
+    "-----------\n",
+    "\n",
+    "- It takes the maximum value of each region of the feature map.\n",
+    "- It helps to preserve the most important features in the image, such as edges and corners.\n",
+    "- It's used for object recognition.\n",
+    "\n",
+    "Mean Pooling\n",
+    "-----------\n",
+    "\n",
+    "- It takes the average value of each region of the feature map.\n",
+    "- It helps to reduce noise and smooth out the feature map.\n",
+    "- It's used for object segmentation.\n",
+    "\n",
+    "----------------------------------------------------------------------------------------------\n",
+    "\n",
+    "2D Pooling\n",
+    "----------\n",
+    "\n",
+    "- It's used for images which are 2D data.\n",
+    "- It takes the rectangular region of the feature map and outputs the maximum or average value from that region.\n",
+    "- It helps to reduce noise and smooth out the feature map.\n",
+    "- It helps to preserve the most important features in the image.\n",
+    "- It's used for image classification.\n",
+    "\n",
+    "3D Pooling\n",
+    "----------\n",
+    "\n",
+    "- It's used for volumetric data such as medical images or video frames\n",
+    "- It takes the cubic region of the feature map and outputs the maximum or average value from that region.\n",
+    "- It helps to reduce noise and smooth out the feature map.\n",
+    "- It helps to preserve the most important features in the image.\n",
+    "- It's used for 3D object rrecognition and medica image segmentation.\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
