chore: Update code

--- a/notebook/09_convolution/01_conv_intro.ipynb
+++ b/notebook/09_convolution/01_conv_intro.ipynb
@@ -6422,7 +6422,8 @@
     "## Pooling\n",
     "\n",
     "```text\n",
-    "- It's technique used to downsample or reduce the spatial dimensions of feature maps extracted from convolutional layers.\n",
+    "- It's a technique used to downsample or reduce the spatial dimensions of feature maps extracted from convolutional layers.\n",
+    "The non-overlapping segments of the feature map are used.\n",
     "\n",
     "Max Pooling\n",
     "-----------\n",
@@ -6574,7 +6575,7 @@
     "IN_CHANNELS = 3  # RGB: Number of channels in the input image\n",
     "OUT_CHANNELS = 10  # Number of channels produced by the convolution\n",
     "KERNEL_SIZE = 5  # Should be an odd number\n",
-    "STRIDE = 3  # Means no stride!\n",
+    "STRIDE = 3  # Move across the image by 3 pixels!\n",
     "PADDING = 2  # Padding added to all four sides of the input. Default: 0\n",
     "\n",
     "POOL_SIZE = 3  # pool size\n",
