--- a/notebook/09_convolution/03_cnn.ipynb
+++ b/notebook/09_convolution/03_cnn.ipynb
@@ -4,29 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convolution Neural Network (CNN)"
+    "# Convolution Neural Network (CNN)\n",
+    "\n",
+    "[![image.png](https://i.postimg.cc/mrXbbMF6/image.png)](https://postimg.cc/t160kskh)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "```text\n",
+    "Layers In A CNN\n",
+    "---------------\n",
+    "- Convolution: This layer learns the filter/kernel used to create feature maps.\n",
+    "- Poooling: This layer is used to reduce the spatial dimension of the image and increase the receptive field size.\n",
+    "- Fully connected: AKA ANN/FFN. It's used for making predictions.\n",
+    "\n",
+    "Typical Architecture\n",
+    "--------------------\n",
+    "Conv -> Pool -> FFN\n",
+    "```\n",
+    "\n",
+    "## Implementations\n",
+    "\n",
+    "1. [Medium blog](https://medium.com/thecyphy/train-cnn-model-with-pytorch-21dafb918f48)\n",
+    "2. [Notebook 1](https://colab.research.google.com/drive/1UD2RIXreLLgUDfLauJqR41QrLw3ufwbN#scrollTo=gHzKOZjnp0qn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The lab_black extension is already loaded. To reload it, use:\n",
-      "  %reload_ext lab_black\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ny/dl75sc_x2tb54lsymt5bh5p00000gn/T/ipykernel_88732/1202702077.py:19: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
+      "/var/folders/ny/dl75sc_x2tb54lsymt5bh5p00000gn/T/ipykernel_24971/2138310355.py:21: DeprecationWarning: `set_matplotlib_formats` is deprecated since IPython 7.23, directly use `matplotlib_inline.backend_inline.set_matplotlib_formats()`\n",
       "  display.set_matplotlib_formats(\"svg\")\n"
      ]
     }
@@ -36,6 +47,8 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import torch\n",
+    "from torch import nn\n",
+    "from torch.nn import functional as F\n",
     "from torch.utils.data import DataLoader, TensorDataset, Dataset\n",
     "import torchvision\n",
     "import torchvision.transforms as T\n",
@@ -22719,20 +22732,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch.utils.data.dataloader.DataLoader at 0x7f7f2bfdccd0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "RANDOM_STATE = 123\n",
     "TEST_SIZE = 0.2\n",
@@ -22750,72 +22752,206 @@
     "    y_train=y_train,\n",
     "    y_validation=y_validation,\n",
     "    batch_size=BATCH_SIZE,\n",
-    ")\n",
-    "\n"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Size of Image At The Current Layer\n",
+    "\n",
+    "$$ N = \\lfloor{(\\frac{M + 2p - k}{S}) + 1}\\rfloor$$\n",
+    "\n",
+    "```text\n",
+    "N = Number of pixels in the current layer.\n",
+    "M = Number of pixels in the previous layer.\n",
+    "2p = Padding (it's multiplied by 2 because it's symmetric)\n",
+    "K = Number of pixels in the kernel/filter.\n",
+    "S = Stride parameter\n",
+    "⌊⌋ = floor (i.e 2.2 becomes 2.0)\n",
+    "```\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "#### Docs\n",
+    "\n",
+    "- [torch.max_pool2d](https://pytorch.org/docs/stable/generated/torch.nn.functional.max_pool2d.html)\n",
+    "- [torch.view](https://pytorch.org/docs/stable/generated/torch.Tensor.view.html)\n",
+    "\n",
+    "\n",
+    "```text\n",
+    "torch.view\n",
+    "----------\n",
+    "- It returns a new tensor with the same data as the self tensor but of a different shape.\n",
+    "```\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Model Architecture\n",
+    "\n",
+    "[![image.png](https://i.postimg.cc/mrXbbMF6/image.png)](https://postimg.cc/t160kskh)\n",
+    "\n",
+    "<br>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNNModel(nn.Module):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "        # Conv layer\n",
+    "        self.conv_1 = nn.Conv2d(\n",
+    "            in_channels=1, out_channels=10, kernel_size=5, stride=1, padding=1\n",
+    "        )\n",
+    "        # size of the output of the conv layer (equation is shown above)\n",
+    "        # size_1 = np.floor((28 + (2*1) - 5) / 1 ) + 1 = 26/2 = 13 (/2 cox of maxpool)\n",
+    "\n",
+    "        self.conv_2 = nn.Conv2d(\n",
+    "            in_channels=10, out_channels=20, kernel_size=5, stride=1, padding=1\n",
+    "        )\n",
+    "        # size_2 = np.floor((13 + (2 * 1) - 5) / 1) + 1 = 11/2 = 5 (/2 cox of maxpool)\n",
+    "\n",
+    "        # ========== Fully Connected Layer ==========\n",
+    "        # Compute the number of units in the FCLayer (i.e. output of conv_2)\n",
+    "        # NB: This FCLayer has no padding or stride\n",
+    "        expected_size = np.floor((5 + (2 * 0) - 1) / 1 + 1)\n",
+    "        # Find the square since it's symmetrical\n",
+    "        expected_size = 20 * int(np.square(expected_size))\n",
+    "        self.fc_layer_3 = nn.Linear(expected_size, 50)\n",
+    "\n",
+    "        # ========== Output Layer ==========\n",
+    "        self.output = nn.Linear(50, 10)\n",
+    "\n",
+    "    def forward(self, X: torch.Tensor) -> torch.Tensor:\n",
+    "        \"\"\"This is used to perform the forward propagation.\"\"\"\n",
+    "        # Conv -> Pool -> FCLayer\n",
+    "        X = F.relu(F.max_pool2d(input=self.conv_1(X), kernel_size=2))\n",
+    "\n",
+    "        # Conv -> Pool -> FCLayer\n",
+    "        X = F.relu(F.max_pool2d(input=self.conv_2(X), kernel_size=2))\n",
+    "\n",
+    "        # ========== Linear Layers ==========\n",
+    "        # Reshape the model for linear layer\n",
+    "        num_units = X.shape.numel() / X.shape[0]\n",
+    "        X = X.view(-1, int(num_units))\n",
+    "        X = F.relu(self.fc_layer_3(X))\n",
+    "        X = self.output(X)\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66 / 100"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1869,  0.0472,  0.0826,  ...,  0.0213,  0.1240,  0.0747],\n",
+       "        [-0.1807,  0.0432,  0.0744,  ...,  0.0102,  0.1114,  0.0766],\n",
+       "        [-0.1892,  0.0258,  0.0806,  ...,  0.0013,  0.1105,  0.0860],\n",
+       "        ...,\n",
+       "        [-0.1832,  0.0333,  0.0966,  ..., -0.0063,  0.1208,  0.0823],\n",
+       "        [-0.1928,  0.0455,  0.0786,  ..., -0.0013,  0.1174,  0.0789],\n",
+       "        [-0.1728,  0.0380,  0.0891,  ...,  0.0124,  0.1062,  0.0725]],\n",
+       "       grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test the model with sample data\n",
+    "sapmle_data = torch.rand(size=(1000, 1, 28, 28))\n",
+    "model = CNNModel()\n",
+    "model(sapmle_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNNModel(nn.Module):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "        # ========== Conv layer ==========\n",
+    "        self.conv_1 = nn.Conv2d(\n",
+    "            in_channels=1, out_channels=10, kernel_size=5, stride=1, padding=1\n",
+    "        )\n",
+    "        # size of the output of the conv layer (equation is shown above)\n",
+    "        # size_1 = np.floor((28 + (2*1) - 5) / 1 ) + 1 = 26/2 = 13 (/2 cox of maxpool)\n",
+    "\n",
+    "        # ========== Pool layer ==========\n",
+    "        self.pool_1 = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+    "\n",
+    "        self.conv_2 = nn.Conv2d(\n",
+    "            in_channels=10, out_channels=20, kernel_size=5, stride=1, padding=1\n",
+    "        )\n",
+    "        # size_2 = np.floor((13 + (2 * 1) - 5) / 1) + 1 = 11/2 = 5 (/2 cox of maxpool)\n",
+    "        self.pool_2 = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+    "\n",
+    "        # ========== Fully Connected Layer ==========\n",
+    "        # Compute the number of units in the FCLayer (i.e. output of conv_2)\n",
+    "        # NB: This FCLayer has no padding or stride\n",
+    "        expected_size = np.floor((5 + (2 * 0) - 1) / 1 + 1)\n",
+    "        # Find the square since it's symmetrical\n",
+    "        expected_size = 20 * int(np.square(expected_size))\n",
+    "        self.fc_layer_3 = nn.Linear(expected_size, 50)\n",
+    "\n",
+    "        # ========== Output Layer ==========\n",
+    "        self.output = nn.Linear(50, 10)\n",
+    "\n",
+    "    def forward(self, X: torch.Tensor) -> torch.Tensor:\n",
+    "        \"\"\"This is used to perform the forward propagation.\"\"\"\n",
+    "        # Conv -> Pool -> FCLayer\n",
+    "        X = F.relu(self.pool_1(X))\n",
+    "\n",
+    "        # Conv -> Pool -> FCLayer\n",
+    "        X = F.relu(self.pool_2(X))\n",
+    "\n",
+    "        # ========== Linear Layers ==========\n",
+    "        # Reshape the model for linear layer\n",
+    "        num_units = X.shape.numel() / X.shape[0]\n",
+    "        X = X.view(-1, int(num_units))\n",
+    "        X = F.relu(self.fc_layer_3(X))\n",
+    "        X = self.output(X)\n",
+    "        return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 shapes cannot be multiplied (1000x49 and 500x50)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtime\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m idx \u001b[39min\u001b[39;00m np\u001b[39m.\u001b[39marange(\u001b[39m1\u001b[39m, \u001b[39m101\u001b[39m):\n\u001b[0;32m----> 6\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m0.3\u001b[39;49m)\n\u001b[1;32m      7\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00midx\u001b[39m}\u001b[39;00m\u001b[39m / 100\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m     sys\u001b[39m.\u001b[39mstdout\u001b[39m.\u001b[39mwrite(\u001b[39m\"\u001b[39m\u001b[39m\\r\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m msg)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[39m=\u001b[39m CNNModel()\n\u001b[0;32m----> 2\u001b[0m model(sapmle_data)\n",
+      "File \u001b[0;32m~/miniconda3/envs/torch_p310/lib/python3.10/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "Cell \u001b[0;32mIn[10], line 43\u001b[0m, in \u001b[0;36mCNNModel.forward\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     41\u001b[0m num_units \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape\u001b[39m.\u001b[39mnumel() \u001b[39m/\u001b[39m X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n\u001b[1;32m     42\u001b[0m X \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mview(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39mint\u001b[39m(num_units))\n\u001b[0;32m---> 43\u001b[0m X \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mrelu(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfc_layer_3(X))\n\u001b[1;32m     44\u001b[0m X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moutput(X)\n\u001b[1;32m     45\u001b[0m \u001b[39mreturn\u001b[39;00m X\n",
+      "File \u001b[0;32m~/miniconda3/envs/torch_p310/lib/python3.10/site-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1502\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/miniconda3/envs/torch_p310/lib/python3.10/site-packages/torch/nn/modules/linear.py:114\u001b[0m, in \u001b[0;36mLinear.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 114\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mlinear(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (1000x49 and 500x50)"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "import time\n",
-    "\n",
-    "\n",
-    "for idx in np.arange(1, 101):\n",
-    "    time.sleep(0.3)\n",
-    "    msg = f\"{idx} / 100\"\n",
-    "    sys.stdout.write(\"\\r\" + msg)"
+    "model = CNNModel()\n",
+    "model(sapmle_data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
