chore: Add notebook on CNN

--- a/notebook/09_convolution/01_conv_intro.ipynb
+++ b/notebook/09_convolution/01_conv_intro.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "```text\n",
     "- Convolution is a mathematical operation that's used to analyze data.\n",
-    "- It's a linear oeration that involves multiplying a filter with an input. The filter is a small array of numbers that's used to extract features from the input.\n",
+    "- It's a linear operation that involves multiplying a filter with an input. The filter is a small array of numbers that's used to extract features from the input.\n",
     "The output of the convolution operation is a new array of numbers that represents the extracted features.\n",
     "- Convolution is the dot product of the kernel/filter and the input (image).\n",
     "- N-kernels produce an N-integer result. i.e. the dot product of an N-filter/kernel input produces an N-layer output.\n",
@@ -36,7 +36,7 @@
     "------------\n",
     "- These refer to the output of convolutional layers in a neural network.\n",
     "- Convolutional layers are used in DL for tasks such as image recognition or computer vision.\n",
-    "- When an input data such as image is fed into a convolutional layer, it undergoes a series of convolutions with learnable filters. These convolutions are element-wise multiplication of the filter with local patches of the input data followed by a summation (dot product). The result of each convolution is a single value that represens a specific feature or pattern present in the input.\n",
+    "- When an input data such as image is fed into a convolutional layer, it undergoes a series of convolutions with learnable filters. These convolutions are element-wise multiplication of the filter with local patches of the input data followed by a summation (dot product). The result of each convolution is a single value that represents a specific feature or pattern present in the input.\n",
     "- The collection of the computed values is known as feature map.\n",
     "```"
    ]
