--- a/notebook/09_convolution/03_cnn.ipynb
+++ b/notebook/09_convolution/03_cnn.ipynb
@@ -22764,7 +22764,7 @@
    "source": [
     "### Size of Image At The Current Layer\n",
     "\n",
-    "$$ N = \\lfloor{(\\frac{M + 2p - k}{S}) + 1}\\rfloor$$\n",
+    "$$ N = \\lfloor{(\\frac{M + 2p - k}{S})}\\rfloor + 1$$\n",
     "\n",
     "```text\n",
     "N = Number of pixels in the current layer.\n",
@@ -22856,6 +22856,7 @@
     "        self.conv_2 = nn.Conv2d(\n",
     "            in_channels=10, out_channels=20, kernel_size=5, stride=1, padding=1\n",
     "        )\n",
+    "        # NB: 13 (this is the output of conv_1. i.e size_1)\n",
     "        # size_2 = np.floor((13 + (2 * 1) - 5) / 1) + 1 = 11/2 = 5 (/2 cox of maxpool)\n",
     "\n",
     "        # ========== Fully Connected Layer ==========\n",
