chore: Update README

--- a/notebook/09_convolution/02_image_transformation.ipynb
+++ b/notebook/09_convolution/02_image_transformation.ipynb
@@ -12978,7 +12978,7 @@
     "            tensors[0].size(0) == t.size(0) for t in tensors\n",
     "        ), \"Size mismatch between tensors\"\n",
     "\n",
-    "        # assign inputs\n",
+    "        # Assign inputs\n",
     "        self.tensors = tensors\n",
     "        self.transform = transform\n",
     "\n",
