--- a/notebook/09_convolution/03b_CNN.ipynb
+++ b/notebook/09_convolution/03b_CNN.ipynb
@@ -47,7 +47,7 @@
     "from torch import nn\n",
     "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
-    "from torchvision.datasets import MNIST\n",
+    "from torchvision.datasets import MNIST, CIFAR10\n",
     "import torchvision.transforms as transforms\n",
     "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
@@ -414,7 +414,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33db8c88c2a9444d91a9ca14bf17acb6",
+       "model_id": "628c9de68900427fa2d87891882d46d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -758,7 +758,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd594af6923943ef8718115fe21f278b",
+       "model_id": "23201d31a5d3490e8f76e3319ce84a4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -790,6 +790,115 @@
    "source": [
     "# Train and evaluate\n",
     "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CIFAR10 Data\n",
+    "\n",
+    "### Load CIFAR10 Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
+   "source": [
+    "cifar10_fp = \"../../data/cifar10/\"\n",
+    "\n",
+    "transform = transforms.Compose(\n",
+    "    [\n",
+    "        # Convert to PyTorch tensors\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=(0.5, 0.5, 0.5), std=(0.5, 0.5, 0.5)),\n",
+    "    ]\n",
+    ")\n",
+    "train_dataset = CIFAR10(root=cifar10_fp, train=True, transform=transform, download=True)\n",
+    "test_dataset = CIFAR10(root=cifar10_fp, train=False, transform=transform, download=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NumpyToTensor:\n",
+    "    \"\"\"This is used to convert NumpPy arrays to PyTorch tensors.\"\"\"\n",
+    "\n",
+    "    def __call__(self, X: npt.NDArray[np.float_]):\n",
+    "        \"\"\"This is used for applying the transformation.\"\"\"\n",
+    "        X = torch.tensor(data=X)\n",
+    "        return X\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"{self.__class__.__name__}()\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5644, 0.8070, 0.3944, 0.7311],\n",
+       "        [0.1611, 0.6007, 0.8659, 0.9835],\n",
+       "        [0.0794, 0.4283, 0.2045, 0.4506],\n",
+       "        [0.5478, 0.0933, 0.2969, 0.9276],\n",
+       "        [0.5690, 0.4574, 0.7535, 0.7419]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.random.random(size=(5, 4))\n",
+    "A_torch = NumpyToTensor()(X=A)\n",
+    "\n",
+    "A_torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NumpyToTensor()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NumpyToTensor()"
    ]
   },
   {
