chore: CNN on CIFAR10 data

--- a/notebook/06_FNN/01a_FFN.ipynb
+++ b/notebook/06_FNN/01a_FFN.ipynb
@@ -30,7 +30,7 @@
     "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
     "from torchvision.datasets import MNIST\n",
-    "import torchvision.transforms as transforms\n",
+    "import torchvision.transforms as T\n",
     "from tqdm.auto import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -165,14 +165,14 @@
     "fp = \"../../data/mnist_digit\"\n",
     "\n",
     "# Chain multiple transformations\n",
-    "transform = transforms.Compose(\n",
+    "transform = T.Compose(\n",
     "    [\n",
     "        # Convert to PyTorch tensors\n",
-    "        transforms.ToTensor(),\n",
+    "        T.ToTensor(),\n",
     "        #  It performs per-channel normalization, where each channel\n",
     "        # (e.g., red, green, blue for an RGB image) is normalized independently.\n",
     "        # Since it's a single channel, we have (0.5,)\n",
-    "        transforms.Normalize(mean=(0.5,), std=(0.5,)),\n",
+    "        T.Normalize(mean=(0.5,), std=(0.5,)),\n",
     "    ]\n",
     ")\n",
     "\n",
