--- a/notebook/09_convolution/02_image_transformation.ipynb
+++ b/notebook/09_convolution/02_image_transformation.ipynb
@@ -12918,6 +12918,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cusom Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NumpyToTensor:\n",
+    "    \"\"\"This is used to convert NumpPy arrays to PyTorch tensors.\"\"\"\n",
+    "\n",
+    "    def __call__(self, X: npt.NDArray[np.float_]):\n",
+    "        \"\"\"This is used for applying the transformation.\"\"\"\n",
+    "        X = torch.tensor(data=X)\n",
+    "        return X\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"{self.__class__.__name__}()\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5644, 0.8070, 0.3944, 0.7311],\n",
+       "        [0.1611, 0.6007, 0.8659, 0.9835],\n",
+       "        [0.0794, 0.4283, 0.2045, 0.4506],\n",
+       "        [0.5478, 0.0933, 0.2969, 0.9276],\n",
+       "        [0.5690, 0.4574, 0.7535, 0.7419]], dtype=torch.float64)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# ===== Usage =====\n",
+    "A = np.random.random(size=(5, 4))\n",
+    "A_torch = NumpyToTensor()(X=A)\n",
+    "\n",
+    "A_torch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
